tests/baselines/reference/jsFileCompilationBindErrors.errors.txt
a.js(1,5): error TS2451: Cannot redeclare block-scoped variable 'C'.
a.js(2,5): error TS2451: Cannot redeclare block-scoped variable 'C'.
a.js(6,5): error TS7027: Unreachable code detected.
a.js(11,9): error TS1100: Invalid use of 'arguments' in strict mode.


==== a.js (4 errors) ====
    let C = "sss";
        ~
!!! error TS2451: Cannot redeclare block-scoped variable 'C'.
    let C = 0;  // Error: Cannot redeclare block-scoped variable 'C'.
        ~
!!! error TS2451: Cannot redeclare block-scoped variable 'C'.
    
    function f() {
        return;
        return;  // Error: Unreachable code detected.
        ~~~~~~~
!!! error TS7027: Unreachable code detected.
    }
    
    function b() {
        "use strict";
        var arguments = 0;  // Error: Invalid use of 'arguments' in strict mode.
            ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
    }